--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=Medicine_User
 
-spring.datasource.url=jdbc:mysql://localhost:3306/rxdb
+spring.datasource.url=jdbc:mysql://localhost:3306/medi_map
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+token.expire.time.in.mill = 500000
+#divition.excel.file.name=overview-division.xlsx
